--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -1,10 +1,10 @@
 version: v1
 plugins:
   - name: go
-    out: pkg/gen/client
+    out: pkg/gen
     opt:
       - paths=source_relative
   - name: go-grpc
-    out: pkg/gen/client
+    out: pkg/gen
     opt:
       - paths=source_relative
