chore(mocks): gen mocks with distinct filename, as make target

--- a/.mockery.yaml
+++ b/.mockery.yaml
@@ -3,8 +3,10 @@ all: true
 outpkg: mocks
 dir: internal/pkg/mocks
 mockname: Mock{{.InterfaceName}}_{{.PackageName}}
+filename: "mock_{{.InterfaceName}}_{{.PackageName}}.go"
 packages:
   github.com/awlsring/tailscale-cloud-exit-nodes/internal/app/api/ports/gateway:
   github.com/awlsring/tailscale-cloud-exit-nodes/internal/app/api/ports/repository:
   github.com/awlsring/tailscale-cloud-exit-nodes/internal/app/api/ports/service:
   github.com/awlsring/tailscale-cloud-exit-nodes/internal/pkg/interfaces:
+  github.com/awlsring/tailscale-cloud-exit-nodes/pkg/gen/headscale/v0.22.3/client/headscale_service:
