feat(cli): build for mac and windows

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -23,6 +23,8 @@ builds:
       - CGO_ENABLED=0
     goos:
       - linux
+      - darwin
+      - windows
     ignore:
       - goarch: "386"
 
@@ -60,6 +62,8 @@ archives:
       {{- else if eq .Arch "386" }}i386
       {{- else }}{{ .Arch }}{{ end }}
       {{- if .Arm }}v{{ .Arm }}{{ end }}
+    allow_different_binary_count: true
+
   - id: cli
     format: tar.gz
     name_template: >-
@@ -69,6 +73,7 @@ archives:
       {{- else if eq .Arch "386" }}i386
       {{- else }}{{ .Arch }}{{ end }}
       {{- if .Arm }}v{{ .Arm }}{{ end }}
+    allow_different_binary_count: true
 
 changelog:
   sort: asc
