feat: serverless support

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -38,6 +38,42 @@ builds:
     ignore:
       - goarch: "386"
 
+  - id: texit-lambda
+    main: ./cmd/serverless/api/main.go
+    binary: texit-lambda
+    env:
+      - CGO_ENABLED=0
+    goos:
+      - linux
+    goarch:
+      - arm64
+    ignore:
+      - goarch: "386"
+
+  - id: texit-lambda-sfn-activities
+    main: ./cmd/serverless/sfn_activities/main.go
+    binary: texit-lambda-sfn-activities
+    env:
+      - CGO_ENABLED=0
+    goos:
+      - linux
+    goarch:
+      - arm64
+    ignore:
+      - goarch: "386"
+
+  - id: texit-discord-lambda
+    main: ./cmd/serverless/discord/main.go
+    binary: texit-discord-lambda
+    env:
+      - CGO_ENABLED=0
+    goos:
+      - linux
+    goarch:
+      - arm64
+    ignore:
+      - goarch: "386"
+
 dockers:
   - id: api-arm64
     dockerfile: build/package/api/Dockerfile
@@ -95,6 +131,39 @@ archives:
     format: tar.gz
     name_template: >-
       {{ .ProjectName }}_
+      {{- title .Os }}_
+      {{- if eq .Arch "amd64" }}x86_64
+      {{- else if eq .Arch "386" }}i386
+      {{- else }}{{ .Arch }}{{ end }}
+      {{- if .Arm }}v{{ .Arm }}{{ end }}
+    allow_different_binary_count: true
+
+  - id: texit-lambda
+    format: tar.gz
+    name_template: >-
+      {{ .ProjectName }}_lambda_
+      {{- title .Os }}_
+      {{- if eq .Arch "amd64" }}x86_64
+      {{- else if eq .Arch "386" }}i386
+      {{- else }}{{ .Arch }}{{ end }}
+      {{- if .Arm }}v{{ .Arm }}{{ end }}
+    allow_different_binary_count: true
+
+  - id: texit-discord-lambda
+    format: tar.gz
+    name_template: >-
+      {{ .ProjectName }}_discord_lambda_
+      {{- title .Os }}_
+      {{- if eq .Arch "amd64" }}x86_64
+      {{- else if eq .Arch "386" }}i386
+      {{- else }}{{ .Arch }}{{ end }}
+      {{- if .Arm }}v{{ .Arm }}{{ end }}
+    allow_different_binary_count: true
+
+  - id: texit-lambda-sfn-activities
+    format: tar.gz
+    name_template: >-
+      {{ .ProjectName }}_lambda_sfn_activities_
       {{- title .Os }}_
       {{- if eq .Arch "amd64" }}x86_64
       {{- else if eq .Arch "386" }}i386
