refactor(discord): ddb type rename

--- a/examples/serverless/assets/config/bot-config.yaml
+++ b/examples/serverless/assets/config/bot-config.yaml
@@ -10,3 +10,7 @@ discord:
   applicationId: "000000000000000"
   publicKey: "000000000000000000000000"
   token: "000000000000000000000000000000000000000000000000"
+notifier:
+  type: sns
+tracker:
+  type: dynamodb
